# genetic-bricks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_structure.rst  notes.txt  script
docs/: Template_Output.xlsx
input/: ShippingRates.csv  categories.txt  colors.txt  euroexchangerate.csv  vendors.csv
input/Instances/: S-10325-1.txt  S-40469-1.txt  S-40517-1.txt  S-9500-1.txt
src/: functions.py  gapython.py  genetic_alg.py  genetic_algorithm.cpp  read_bs.py
